# fast_hbcc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: Docs.yml  Publish.yml  Tests.yml
doc/: conf.py  examples.rst  index.rst  reference.rst
docs/: conf.py  examples.rst  index.rst  reference.rst
fast_hbcc/: __init__.py  api.py  hbcc.py  n_hop.py  sub_clusters.py
fast_hbcc/tests/: test_hbcc.py  test_sub_clusters.py
notebooks/: HBCC.ipynb  branch_detection_benchmark.ipynb  branch_detection_performance.ipynb
notebooks/data/flareable/: ReadMe.md
notebooks/lib/: cdc.py
src/fast_hbcc/: __init__.py  priority_queue.py  sub_clusters.py
