[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_hbcc"
version = "0.1.0"
description = "Hierarchical Boundary Coefficient Clustering."
keywords = ["clustering", "machine learning"]
authors = [
  {name= "Jelmer Bot", email = "jelmer.bot@uhasselt.be" }
]
readme = "README.md"
license = { text = "BSD-2-Clause" } 
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
	  "Topic :: Scientific/Engineering",
	  "Topic :: Scientific/Engineering :: Visualization",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.2, <3",
    "numba >= 0.57.1",
    "scipy >= 1.9",
    "scikit-learn >= 1.1",
    "fast_hdbscan @ git+https://github.com/TutteInstitute/fast_hdbscan.git@main#egg=fast_hdbscan"
]

[project.urls]
Homepage = "https://github.com/vda-lab/fast_hbcc"
Issues = "https://github.com/vda-lab/fast_hbcc/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fast_hbcc*"]
namespaces = false

[project.optional-dependencies]
tests = ["pytest"]
docs = [
	"sphinx >= 8",
	"nbsphinx >= 0.9",
	"sphinx_rtd_theme >= 2.0",
	"matplotlib >= 3.8",
  "pygments>=2.4.1",
  "jupyterlab_pygments>=0.1.1",
  "ipykernel",
  "numpydoc",
]
notebooks = [
	"pandas >= 2.2",
  "jupyterlab >= 4",
  "matplotlib >= 3.4",
  "tqdm >= 4.62.3"
]