[metadata]
name = fast_hbcc
version = 0.1.0
author = Jelmer Bot
author_email = jelmer.bot@uhasselt.be
maintainer = Jelmer Bot
maintainer_email = jelmer.bot@uhasselt.be
description = Hierarchical Boundary Coefficient Clustering.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = clustering
url = https://github.com/vda-lab/hbcc
license = BSD 2-Clause License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
zip_safe = False
packages = 
    fast_hbcc
    fast_hbcc.tests
python_requires = >=3.9
install_requires =
    numpy >= 1.2, <3
    numba >= 0.57.1
    scipy >= 1.9
    scikit-learn >= 1.1
    fast_hdbscan >= 0.2.0
